# rosav

./: .gitignore  Cargo.toml  README.md  Trunk.toml  acquisitor_tutorial.md  index.html  notes.md  style.css  style.scss
.github/workflows/: tauri_build.yml
.helix/: languages.toml
frontend/: Cargo.toml  Trunk.toml  index.html  style.scss
frontend/js/: utils.js
frontend/src/: graph.rs  js_glue.rs  main.rs  trace.rs
frontend/src/api/: acquisitors.rs  mod.rs
frontend/src/side_bar/: acquisitor_config_renders.rs  mod.rs
src/: api.rs  graph.rs  main.rs  side_bar.rs  trace.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  config.rs  file_reader.rs  lib.rs  main.rs  spectrum.rs  spectrum_backend.rs  spectrum_handler.rs  svg_utils.rs
src-tauri/src/acquisitors/: file_reader.rs
src-tauri/src/spectrum_handler/: mod.rs  time_series.rs
src-tauri/src/spectrum_handler/acquisitors/: example.rs  file_reader.rs  ibsen_imon.rs  mod.rs
src/api/: acquisitors.rs  mod.rs
src/side_bar/: acquisitor_config_renders.rs  mod.rs
