[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.1", features = ["dialog"] }
itertools = "0.10.5"

notify = "5.1.0"
csv = "1.2.1"
chrono = "0.4.24"
toml = "0.6"
home = "0.5.5"
thiserror = "1.0.40"

serialport = "4.2.1"

find_peaks = "0.1.5"
varpro = "0.6.0"
nalgebra = "0.32.3"

log = "0.4"
fern = "0.6"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
